# legym-server

./: README.md  lejian.py
legym-master/: README.md  setup.cfg
legym-master/legym/: __init__.py  activities.py  activity.py  api.py  exception.py  official.py  requester.py  response.py  user.py
