[metadata]
name = legym
version = 0.3
url = https://github.com/MrCaiDev/legym
download_url = https://pypi.org/project/legym
project_urls =
    Bug Tracker = https://github.com/MrCaiDev/legym/issues
author = Sake
author_email = 1193368126@qq.com
maintainer = Yuwang Cai
maintainer_email = 1014305148@qq.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: Microsoft :: Windows
    Intended Audience :: Developers
    Natural Language :: Chinese (Simplified)
license = GPL
description = Non-official module built upon APIs of Legym Sports App.
long_description = file: README.md
long_description_content_type = text/markdown
platforms = Windows

[options]
install_requires = requests
packages = find:
python_requires = >=3.7